--- a/css/styles.css
+++ b/css/styles.css
@@ -30,13 +30,18 @@ body {
   background: var(--primary-color);
 }
 
+.fav__icon {
+  width: auto;
+  height: auto;
+}
+
 .swal2-confirm {
   display: none !important;
 }
 
 html {
   scroll-behavior: smooth;
-  -webkit-tap-highlight-color: rgba(0, 0, 5, 0.4);
+  -webkit-tap-highlight-color: rgba(0, 0, 5, 0.103);
 }
 
 h1 {
@@ -56,7 +61,7 @@ a,
   transition: var(--main-trans);
 }
 
-/* Nav  */
+/* NAV  */
 
 nav,
 .nav-links {
@@ -86,9 +91,9 @@ nav {
   display: none;
 }
 
-.fav__icon {
-  width: auto;
-  height: auto;
+.nav-wrapper {
+  display: flex;
+  gap: 20px;
 }
 
 li {
@@ -965,11 +970,11 @@ footer .nav-links-conatainer {
   color: var(--darkmode-bg);
 }
 
-#dark-container #contact button.btn:last-child:hover i {
-  color: var(--secon-color) !important;
+#dark-container .slider[data-animated="true"] {
+  -webkit-mask: unset;
+  mask: unset;
 }
 
-.nav-wrapper {
-  display: flex;
-  gap: 20px;
+#dark-container #contact button.btn:last-child:hover i {
+  color: var(--secon-color) !important;
 }
