setting up styles for preloader

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,71 @@ h1 {
   font-size: 3rem;
 }
 
+/* PRELOADER STYLES  */
+
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+
+  height: 100%;
+  width: 100%;
+  background-color: var(--darkmode-bg);
+
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  transition: opacity 0.5s ease-out;
+}
+
+.preloader .blocks {
+  position: relative;
+  width: 70px;
+  height: 70px;
+  animation: rotate 5s ease-in-out infinite;
+}
+
+.blocks .block {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border-radius: 4px;
+  background: var(--secon-color);
+  transition: all 0.25s linear;
+}
+.blocks .block:nth-child(1) {
+  top: 0;
+  left: 40px;
+}
+
+.blocks .block:nth-child(2) {
+  top: 0px;
+  left: 0;
+}
+.blocks .block:nth-child(3) {
+  top: 40px;
+  left: 0px;
+}
+
+.preloader .preloader__text {
+  margin-top: 50px;
+  font-size: 3rem;
+  font-weight: 300;
+  color: var(--primary-color);
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* PRELOADER STYLES ENDS */
 .container {
   position: relative;
   background: var(--primary-color);
