--- a/css/mediaQueries.css
+++ b/css/mediaQueries.css
@@ -69,6 +69,10 @@
     height: 400px;
   }
 
+  #home .change-text h3 {
+    font-size: calc(var(--normal-font) - 0.4em);
+  }
+
   #home .btn-container {
     flex-direction: column-reverse;
     justify-content: center;
@@ -92,8 +96,6 @@
   .text_1 {
     margin-bottom: 15px;
     padding: 0 5px;
-    line-height: 1.7rem;
-    letter-spacing: 1px;
   }
 
   .text-container .btn-wrapper {
