--- a/css/styles.css
+++ b/css/styles.css
@@ -467,7 +467,7 @@ button.btn:last-child:hover::before {
 
 #about {
   position: relative;
-  height: fit-content;
+  height: auto;
 }
 
 .title,
@@ -513,34 +513,24 @@ button.btn:last-child:hover::before {
 
 .details-containers {
   padding: 1rem;
+  display: flex;
   flex: 1;
+  flex-flow: column;
+  justify-content: unset;
   background: var(--primary-color);
   border-radius: 2rem;
   border: var(--secon-color) 0.1rem solid;
   text-align: center;
-  min-width: 350px;
+  min-width: 330px;
 
   animation: animateDetailsContainers 2s linear forwards;
   animation-timeline: view();
   animation-range-end: 350px;
 }
 
-/* #about .section_pic_container {
-  animation: animateAboutImg 2s linear forwards;
-  animation-timeline: view();
-  animation-range-end: 400px;
+#experience .details-containers {
+  padding: 3rem;
 }
-
-@keyframes animateAboutImg {
-  from {
-    transform: translateX(-120px);
-    scale: 0.5;
-  }
-  to {
-    transform: translateX(0);
-    scale: 1;
-  }
-} */
 
 .section-container {
   gap: 4rem;
@@ -566,13 +556,12 @@ button.btn:last-child:hover::before {
 
 .text_2,
 .text_1 {
-  margin-bottom: 8px;
+  margin-bottom: 25px;
 }
 
 .text-container .active {
   display: block;
   transition: var(--main-trans);
-  /* animation: vanish 1.5s linear forwards; */
 }
 
 button.normal {
@@ -580,17 +569,11 @@ button.normal {
   z-index: 10;
 }
 
-/* @keyframes vanish {
-  to {
-    opacity: 1;
-    visibility: visible;
-  }
-} */
-
 /* EXPERINIECE SECTION  */
 
 #experience {
   position: relative;
+  height: auto;
 }
 
 .experience-sub-title {
